<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="com.blackstone.ratusha.ui.screens.settings.SettingsModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/border_radius_10dp">

            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/notification_settings"
                    android:textColor="@color/card_view_text_blue"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/background_dialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <LinearLayout
                    android:id="@+id/wrap_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider">

                <androidx.appcompat.widget.SwitchCompat
                        android:theme="@style/SwitchSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:checked="@={viewModel.checkTpForpost}"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/notification_tp_forpost"
                        android:textColor="@color/card_view_text_blue"
                        android:textSize="14sp" />

                <androidx.appcompat.widget.SwitchCompat
                        android:theme="@style/SwitchSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:checked="@={viewModel.checkTpOctal}"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/notification_tp_octal"
                        android:textColor="@color/card_view_text_blue"
                        android:textSize="14sp" />

                <androidx.appcompat.widget.SwitchCompat
                        android:theme="@style/SwitchSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:checked="@={viewModel.checkStatusForpost}"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/notification_close_forpost"
                        android:textColor="@color/card_view_text_blue"
                        android:textSize="14sp" />

                <androidx.appcompat.widget.SwitchCompat
                        android:theme="@style/SwitchSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:checked="@={viewModel.checkStatusOctal}"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/notification_close_octal"
                        android:textColor="@color/card_view_text_blue"
                        android:textSize="14sp" />

            </LinearLayout>

            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/background_dialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wrap_checkbox" />

            <LinearLayout
                    android:id="@+id/buttonMenuItem"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider2">

                <TextView
                        android:id="@+id/actionBack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:onClick="@{()-> viewModel.onClickBack()}"
                        android:text="@string/cancel"
                        android:textColor="@color/card_view_text_blue"
                        tools:text="BACK" />

                <LinearLayout
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@color/background_dialog"/>

                <TextView
                        android:id="@+id/actionSave"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:onClick="@{() -> viewModel.onClickSave()}"
                        android:text="@string/save"
                        android:textColor="@color/card_view_text_blue"
                        tools:text="SAVE" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>