<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.blackstone.ratusha.ui.screens.detailed.DetailItemViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryBlack"
            android:clickable="true"
            android:focusable="true"
            tools:context=".ui.screens.detailed.DetailItemInfo">

        <LinearLayout
                android:id="@+id/headLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_detail"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:text="@{viewModel.counter ?? @string/startCounter}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tvCounter"
                    android:alpha="0.0"
                    anim="@{viewModel.counterVisible}"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/colorAccent"
                    android:textSize="52sp"
                    android:gravity="center"/>
        </LinearLayout>


        <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/white12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headLayout"/>

        <LinearLayout
                android:id="@+id/img_wrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border_radius_items_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2">

            <ImageView
                    android:id="@+id/imgItem"
                    src="@{viewModel.item.image}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_iw_empty"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <TextView
                style="@style/DetailHeaderText"
                android:id="@+id/tv_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.item.name ?? @string/not_found_item}"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/img_wrap"
                app:layout_constraintTop_toBottomOf="@+id/headLayout"
                tools:text="@string/not_found_item" />

        <TextView
                style="@style/DetailItemText"
                android:id="@+id/tv_item_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/item_level(viewModel.item.level)}"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/img_wrap"
                app:layout_constraintStart_toStartOf="@+id/img_wrap"
                app:layout_constraintTop_toBottomOf="@+id/img_wrap" />

        <TextView
                style="@style/DetailItemText"
                android:id="@+id/tv_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@{@string/item_price(viewModel.item.price)}"
                app:layout_constraintStart_toStartOf="@+id/tv_item_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
                tools:text="Цена: 200 / " />

        <TextView
                style="@style/DetailItemText"
                android:id="@+id/tv_item_skill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/item_level_profession(viewModel.item.skill)}"
                tools:text="Умение: 540 / "
                app:layout_constraintStart_toStartOf="@+id/tv_item_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_price" />

        <TextView
                style="@style/DetailItemText"
                android:id="@+id/tv_item_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"
                android:text="@{@string/item_weight(viewModel.item.weight)}"
                tools:text="масса: 70"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/tv_item_skill"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_price" />

        <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@drawable/icon_reputation"
                app:layout_constraintBottom_toBottomOf="@+id/tv_item_price"
                app:layout_constraintStart_toEndOf="@+id/tv_item_price"
                app:layout_constraintTop_toTopOf="@+id/tv_item_price"/>

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/tv_item_rep"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_item_rep">


            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:paddingEnd="6dp"
                    android:src="@drawable/ic_rounded_delete_button"
                    app:onTouchListener="@{viewModel::onMinusTouched}" />


            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="3"
                    android:minWidth="20dp"
                    android:onTextChanged="@{viewModel::onTextChanged}"
                    android:text="@={viewModel.craft}"
                    android:textColor="@color/colorSuperLightWhite"
                    android:textSize="14sp"
                    tools:text="999" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:paddingStart="6dp"
                    android:src="@drawable/ic_round_add_button"
                    app:onTouchListener="@{viewModel::onPlusTouched}" />
        </LinearLayout>

        <TextView
                style="@style/DetailItemText"
                android:id="@+id/tv_item_rep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:text= "@{@string/item_reputation(Double.toString(viewModel.item.reputation))}"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/tv_item_price"
                tools:text="х0" />

        <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/white12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_wrap" />

        <TextView
                android:id="@+id/textView4"
                style="@style/DetailTableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/full_info_component"
                app:layout_constraintBottom_toTopOf="@+id/divider4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <View
                android:id="@+id/divider7"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/white12"
                app:layout_constraintBottom_toTopOf="@+id/divider4"
                app:layout_constraintEnd_toStartOf="@+id/tv_quantity"
                app:layout_constraintTop_toBottomOf="@+id/divider3"/>

        <TextView
                style="@style/DetailTableText"
                android:id="@+id/tv_quantity"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="5dp"
                android:text="@{viewModel.typeItemNoAlchemy ? @string/detail_item_quantity : @string/detail_item_type}"
                app:layout_constraintBottom_toTopOf="@+id/divider4"
                app:layout_constraintEnd_toStartOf="@+id/tv_price"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                tools:text="@string/detail_item_quantity" />


        <TextView
                style="@style/DetailTableText"
                android:id="@+id/tv_price"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@{viewModel.typeItemNoAlchemy ? @string/detail_item_price : @string/detail_item_time}"
                app:layout_constraintBottom_toTopOf="@+id/divider4"
                app:layout_constraintEnd_toStartOf="@+id/tv_cost"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                tools:text="@string/detail_item_price" />


        <TextView
                android:id="@+id/tv_cost"
                style="@style/DetailTableText"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:paddingStart="8dp"
                android:text="@{viewModel.typeItemNoAlchemy ? @string/detail_item_cost : @string/detail_item_price}"
                app:layout_constraintBottom_toTopOf="@+id/divider4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                tools:text="@string/detail_item_cost" />

        <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="46dp"
                android:background="@color/white12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3"/>


        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                        style="@style/DetailHeaderText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/detailed_total"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tv_total"
                        app:layout_constraintTop_toBottomOf="@+id/recyclerInfo"
                        app:layout_constraintVertical_bias="0.0"/>


                <TextView
                        style="@style/DetailHeaderText"
                        android:id="@+id/tv_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:paddingStart="16dp"
                        android:text="@{viewModel.total ?? @string/total}"
                        tools:text="65"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recyclerInfo"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>